cmake_minimum_required(VERSION 3.5.0)
project(bench_hv VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
add_executable(ws_cli ws_cli.cpp)
add_executable(tcp_cli tcp_cli.cpp)
add_executable(kcp_cli kcp_cli.cpp)
add_executable(ws_srv ws_srv.cpp)
add_executable(tcp_srv tcp_srv.cpp)
add_executable(kcp_srv kcp_srv.cpp)

target_compile_definitions(kcp_srv PRIVATE WITH_KCP)
target_compile_definitions(kcp_cli PRIVATE WITH_KCP)

find_package(fmt CONFIG REQUIRED)
target_link_libraries(ws_cli PRIVATE fmt::fmt)
target_link_libraries(ws_srv PRIVATE fmt::fmt)
target_link_libraries(tcp_cli PRIVATE fmt::fmt)
target_link_libraries(tcp_srv PRIVATE fmt::fmt)
target_link_libraries(kcp_cli PRIVATE fmt::fmt)
target_link_libraries(kcp_srv PRIVATE fmt::fmt)

find_package(libhv CONFIG REQUIRED)
target_link_libraries(ws_cli PRIVATE hv_static)
target_link_libraries(ws_srv PRIVATE hv_static)
target_link_libraries(tcp_cli PRIVATE hv_static)
target_link_libraries(tcp_srv PRIVATE hv_static)
target_link_libraries(kcp_cli PRIVATE hv_static)
target_link_libraries(kcp_srv PRIVATE hv_static)